--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,558 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="styles.css" rel="stylesheet">
     <title>Les P'tits Ruisseaux -
         Epicerie Durable</title>
+    <style>
+
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+
+        :root {
+            -moz-tab-size: 4;
+            tab-size: 4;
+        }
+
+
+        html {
+            line-height: 1.15;
+            -webkit-text-size-adjust: 100%;
+        }
+
+
+        body {
+            margin: 0;
+        }
+
+
+        body {
+            font-family: system-ui,
+            -apple-system,
+            'Segoe UI',
+            Roboto,
+            Helvetica,
+            Arial,
+            sans-serif,
+            'Apple Color Emoji',
+            'Segoe UI Emoji';
+        }
+
+
+        hr {
+            height: 0;
+            color: inherit;
+        }
+
+
+        abbr[title] {
+            text-decoration: underline dotted;
+        }
+
+
+        b,
+        strong {
+            font-weight: bolder;
+        }
+
+
+        code,
+        kbd,
+        samp,
+        pre {
+            font-family: ui-monospace,
+            SFMono-Regular,
+            Consolas,
+            'Liberation Mono',
+            Menlo,
+            monospace;
+            font-size: 1em;
+        }
+
+
+        small {
+            font-size: 80%;
+        }
+
+
+        sub,
+        sup {
+            font-size: 75%;
+            line-height: 0;
+            position: relative;
+            vertical-align: baseline;
+        }
+
+        sub {
+            bottom: -0.25em;
+        }
+
+        sup {
+            top: -0.5em;
+        }
+
+
+        table {
+            text-indent: 0;
+            border-color: inherit;
+        }
+
+
+        button,
+        input,
+        optgroup,
+        select,
+        textarea {
+            font-family: inherit;
+            font-size: 100%;
+            line-height: 1.15;
+            margin: 0;
+        }
+
+
+        button,
+        select {
+            text-transform: none;
+        }
+
+
+        button,
+        [type='button'] {
+            -webkit-appearance: button;
+        }
+
+
+        legend {
+            padding: 0;
+        }
+
+
+        progress {
+            vertical-align: baseline;
+        }
+
+
+        summary {
+            display: list-item;
+        }
+
+
+        blockquote,
+        dl,
+        dd,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        hr,
+        figure,
+        p,
+        pre {
+            margin: 0;
+        }
+
+        button {
+            background-color: transparent;
+            background-image: none;
+        }
+
+
+        button:focus {
+            outline: 1px dotted;
+            outline: 5px auto -webkit-focus-ring-color;
+        }
+
+        fieldset {
+            margin: 0;
+            padding: 0;
+        }
+
+        ol,
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+
+        html {
+            font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            line-height: 1.5;
+        }
+
+
+        body {
+            font-family: inherit;
+            line-height: inherit;
+        }
+
+
+        *,
+        ::before,
+        ::after {
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+        }
+
+
+        hr {
+            border-top-width: 1px;
+        }
+
+
+        img {
+            border-style: solid;
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        input::placeholder,
+        textarea::placeholder {
+            color: #9ca3af;
+        }
+
+        button {
+            cursor: pointer;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-size: inherit;
+            font-weight: inherit;
+        }
+
+
+        a {
+            color: inherit;
+            text-decoration: inherit;
+        }
+
+
+        button,
+        input,
+        optgroup,
+        select,
+        textarea {
+            padding: 0;
+            line-height: inherit;
+            color: inherit;
+        }
+
+
+        pre,
+        code,
+        kbd,
+        samp {
+            font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        }
+
+
+        img,
+        svg,
+        video,
+        canvas,
+        audio,
+        iframe,
+        embed,
+        object {
+            display: block;
+            vertical-align: middle;
+        }
+
+
+        img,
+        video {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .space-y-8 > :not([hidden]) ~ :not([hidden]) {
+            --tw-space-y-reverse: 0;
+            margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+            margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+        }
+
+        .bg-white {
+            --tw-bg-opacity: 1;
+            background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+        }
+
+        .bg-gray-100 {
+            --tw-bg-opacity: 1;
+            background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+        }
+
+        .border-gray-200 {
+            --tw-border-opacity: 1;
+            border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+        }
+
+        .border-gray-900 {
+            --tw-border-opacity: 1;
+            border-color: rgba(17, 24, 39, var(--tw-border-opacity));
+        }
+
+        .rounded {
+            border-radius: 0.25rem;
+        }
+
+        .border-l-4 {
+            border-left-width: 4px;
+        }
+
+        .border-b {
+            border-bottom-width: 1px;
+        }
+
+        .flex {
+            display: flex;
+        }
+
+        .flex-col {
+            flex-direction: column;
+        }
+
+        .flex-wrap {
+            flex-wrap: wrap;
+        }
+
+        .items-center {
+            align-items: center;
+        }
+
+        .justify-end {
+            justify-content: flex-end;
+        }
+
+        .justify-center {
+            justify-content: center;
+        }
+
+        .font-semibold {
+            font-weight: 600;
+        }
+
+        .font-bold {
+            font-weight: 700;
+        }
+
+        .font-extrabold {
+            font-weight: 800;
+        }
+
+        .h-52 {
+            height: 13rem;
+        }
+
+        .h-72 {
+            height: 18rem;
+        }
+
+        .text-sm {
+            font-size: 0.875rem;
+            line-height: 1.25rem;
+        }
+
+        .text-xl {
+            font-size: 1.25rem;
+            line-height: 1.75rem;
+        }
+
+        .text-2xl {
+            font-size: 1.5rem;
+            line-height: 2rem;
+        }
+
+        .text-3xl {
+            font-size: 1.875rem;
+            line-height: 2.25rem;
+        }
+
+        .list-disc {
+            list-style-type: disc;
+        }
+
+        .m-4 {
+            margin: 1rem;
+        }
+
+        .my-6 {
+            margin-top: 1.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .mx-auto {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .mt-4 {
+            margin-top: 1rem;
+        }
+
+        .mt-6 {
+            margin-top: 1.5rem;
+        }
+
+        .mt-8 {
+            margin-top: 2rem;
+        }
+
+        .ml-8 {
+            margin-left: 2rem;
+        }
+
+        .mb-32 {
+            margin-bottom: 8rem;
+        }
+
+        .max-w-sm {
+            max-width: 24rem;
+        }
+
+        .max-w-lg {
+            max-width: 32rem;
+        }
+
+        .min-h-screen {
+            min-height: 100vh;
+        }
+
+        .overflow-hidden {
+            overflow: hidden;
+        }
+
+        .py-3 {
+            padding-top: 0.75rem;
+            padding-bottom: 0.75rem;
+        }
+
+        .px-4 {
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+
+        .pt-2 {
+            padding-top: 0.5rem;
+        }
+
+        .shadow {
+            box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+        }
+
+        .text-left {
+            text-align: left;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .text-gray-700 {
+            --tw-text-opacity: 1;
+            color: rgba(55, 65, 81, var(--tw-text-opacity));
+        }
+
+        .text-gray-900 {
+            --tw-text-opacity: 1;
+            color: rgba(17, 24, 39, var(--tw-text-opacity));
+        }
+
+        .text-indigo-500 {
+            --tw-text-opacity: 1;
+            color: rgba(99, 102, 241, var(--tw-text-opacity));
+        }
+
+        .italic {
+            font-style: italic;
+        }
+
+        .hover\:underline:hover {
+            text-decoration: underline;
+        }
+
+        .w-auto {
+            width: auto;
+        }
+
+        .w-full {
+            width: 100%;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        @keyframes ping {
+            75%, 100% {
+                transform: scale(2);
+                opacity: 0;
+            }
+        }
+
+        @keyframes pulse {
+            50% {
+                opacity: .5;
+            }
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(-25%);
+                animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+            }
+
+            50% {
+                transform: none;
+                animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+            }
+        }
+
+        @media (min-width: 640px) {
+            .sm\:px-6 {
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+            }
+        }
+
+        @media (min-width: 768px) {
+        }
+
+        @media (min-width: 1024px) {
+            .lg\:px-8 {
+                padding-left: 2rem;
+                padding-right: 2rem;
+            }
+        }
+
+        @media (min-width: 1280px) {
+        }
+
+        @media (min-width: 1536px) {
+        }
+    </style>
 </head>
 
 <body>
@@ -86,7 +633,7 @@
                 Épicerie durable ?
             </h2>
             <p class="mt-4 text-l text-gray-900">
-                L'épicerie "Les p'tits ruisseaux" est conçue dans une optique de réduction des déchets: tout est
+                L'épicerie "Les p'tits ruisseaux" est conçue dans une optique de réduction des déchets&nbsp;: tout est
                 accessible en vrac&nbsp;! L'idéal est de venir avec ses propres contenants (bocaux, sacs en tissus,
                 boites réutilisables, etc).
                 Vous n'avez pas l'habitude mais vous aimeriez quand même profiter des produits locaux et bios ?
