--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Les P'tits Ruisseaux -
-        Epicerie Durable</title>
+        Épicerie Durable</title>
     <style>
 
 
@@ -562,7 +562,7 @@
         <div>
             <h1 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
                 <img class="mx-auto h-72 w-auto" src="autumn.jpg" alt="Les P'tits Ruisseaux -
-                Epicerie Durable">
+                Épicerie Durable">
             </h1>
             <p class="mt-6 text-center text-xl font-bold text-gray-900">6 Place Ernest Bréant à Châteaubriant</p>
             <img class="mx-auto my-6 h-52 w-auto" src="photo_magasin.jpg" alt="">
