--- a/public/index.html
+++ b/public/index.html
@@ -561,7 +561,7 @@
     <div class="max-w-lg w-full space-y-8 mb-32">
         <div>
             <h1 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-                <img class="mx-auto h-72 w-auto" src="autumn.jpg" alt="Les P'tits Ruisseaux -
+                <img class="mx-auto h-72 w-auto" src="autumn.jpg" alt="Les p'tits ruisseaux -
                 Épicerie Durable">
             </h1>
             <p class="mt-6 text-center text-xl font-bold text-gray-900">6 Place Ernest Bréant à Châteaubriant</p>
